# whisperX

./: pyproject.toml
whisperx/: diarize.py
