[project]
name = "whisperx"
version = "3.7.5-dev"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
authors = [{ name = "Max Bain" }]
license = { text = "BSD-2-Clause" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
urls = { repository = "https://github.com/splinteredlight/whisperX" }

dependencies = [
    "ctranslate2>=4.5.0",
    "faster-whisper>=1.1.1",
    "nltk>=3.9.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3,<2.3.0",
    "av<16.0.0",
    "omegaconf>=2.3.0",
    "pyannote-audio>=4.0.1",
    "torch~=2.8.0",
    "torchaudio~=2.8.0",
    "transformers>=4.48.0",
    "triton>=3.3.0; sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[project.scripts]
whisperx = "whisperx.__main__:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# --- Poetry shim for backward compatibility ---
[tool.poetry]
name = "whisperx"
version = "3.7.5-dev"
description = "Time-Accurate Automatic Speech Recognition using Whisper."
authors = ["Max Bain"]
license = "BSD-2-Clause"
readme = "README.md"
packages = [{ include = "whisperx" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ctranslate2 = ">=4.5.0"
faster-whisper = ">=1.1.1"
nltk = ">=3.9.1"
numpy = ">=2.2.2"
pandas = ">=2.2.3,<2.3.0"
av = "<16.0.0"
omegaconf = ">=2.3.0"
"pyannote-audio" = ">=4.0.1"
torch = "~=2.8.0"
torchaudio = "~=2.8.0"
transformers = ">=4.48.0"
triton = { version = ">=3.3.0", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'" }

[[tool.poetry.source]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["whisperx*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", marker = "platform_machine != 'x86_64' and sys_platform != 'darwin'" },
  { index = "pytorch", marker = "platform_machine == 'x86_64' and sys_platform != 'darwin'" },
]
triton = [
  { index = "pytorch", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
